--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,11 @@ h3{
     font-size: 30px;
 }
 
+h4{
+    font-size: 10px:
+    color: #021db3;
+}
+
 .title-of-page{
     display: flex;
     justify-content: center;
