--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ header {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 h1{
+    font-size: 1.5rem;
     padding: 2rem;
     padding-left: 8rem;
     padding-bottom: 1rem;
