--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,11 @@ h4{
     line-height: 1.6;
   }
 
+  .homesectiontwoandthree{
+    display: flex;
+    justify-content: space-evenly;
+
+  }
 
 
 .logo {
