--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,10 @@ h4{
     line-height: 1.6;
   }
 
+  .publications{
+      white-space: pre;
+  }
+
   .homesectiontwoandthree{
     display: flex;
     justify-content: space-evenly;
