--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ nav ul li a:hover {
 
 footer ul li a{
     color: rgb(255, 255, 255);
+    text-decoration: none;
     transition: color 0.3s ease;
 }
 
@@ -152,6 +153,7 @@ footer ul li a:hover {
 
 main ul li a{
     color: #fdfdfd;
+    text-decoration: none;
     transition: color 0.3s ease;
 }
 
