--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ main ul {
 }
 
 main ul li a{
-    color: #fdfdfd;
+    color: #1703fc;
     text-decoration: none;
     transition: color 0.3s ease;
 }
