--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ h4{
   
   .text-container-intro p {
     padding-left: 2rem;
+    padding-right: 2rem;
     margin-bottom: 15px;
     line-height: 1.6;
     color: #ffffff;
