--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,7 @@ main ul {
     display: flex;
     list-style: none;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
     gap: 3rem;
 }
 
